# Madrigal.jl

./: .gitignore  CondaPkg.toml  Project.toml  README.md  justfile
.github/workflows/: CI.yml  Doc.yml
benchmark/: Project.toml  benchmarks.jl
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
docs/: Project.toml  make.jl
docs/src/: index.md
ext/: HDF5DimensionalData.jl
previews/PR21/: .documenter-siteinfo.json  index.html
previews/PR22/: .documenter-siteinfo.json  index.html
python/: README.md  juliapkg.json  pyproject.toml
python/src/madrigal/: __init__.py
python/tests/: test_wrapper.py
src/: Madrigal.jl  MadrigalWeb.jl  conf.jl  download.jl  experiments.jl  file.jl  instruments.jl  metadata.jl  name_mapping.jl  parameters.jl  types.jl  utils.jl  web.jl
src/MadrigalHDF5Dataset/src/: MadrigalHDF5Dataset.jl  hdf5dataset.jl  multifile.jl
test/: Project.toml  runtests.jl
